--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div class="welcome-stats">
             <div class="stat-item">
               <span class="stat-number">35</span>
-              <span class="stat-label">Development Tools <br> More Coming Soon</span>
+              <span class="stat-label">Development Tools</span>
             </div>
             <div class="stat-item">
               <span class="stat-number">7</span>
