All errors and bugs are solved, Ready To Lanched.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Toolify - Tools That Matter</title>
+    <title>ToolGrid - Tools That Matter</title>
+    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,7 +23,10 @@
     <header>
       <nav class="container">
         <div class="nav-left">
-          <h1>Toolify</h1>
+          <div class="logo-container">
+            <!-- <img src="images/logo.svg" alt="ToolGrid Logo" class="logo-img"> -->
+            <h1>ToolGrid</h1>
+          </div>
           <!-- <div class="search-container">
             <input
               type="text"
@@ -46,18 +51,18 @@
     <section class="welcome-section">
       <div class="container">
         <div class="welcome-content">
-          <h2 class="welcome-title">Welcome to Toolify</h2>
+          <h2 class="welcome-title">Welcome to ToolGrid</h2>
           <p class="welcome-text">
             Your one-stop platform for discovering the best development tools,
             frameworks, and resources.
           </p>
           <div class="welcome-stats">
             <div class="stat-item">
-              <span class="stat-number">35</span>
+              <span class="stat-number">42</span>
               <span class="stat-label">Development Tools</span>
             </div>
             <div class="stat-item">
-              <span class="stat-number">7</span>
+              <span class="stat-number">9</span>
               <span class="stat-label">Categories</span>
             </div>
             <div class="stat-item">
@@ -75,8 +80,12 @@
       <section class="categories-grid">
         <!-- AI Tools -->
         <div class="category-card" data-category="ai">
-          <h3><i class="fas fa-robot"></i> AI Tools</h3>
-          <div class="category-content" id="aiTools"></div>
+          <h3><i class="fas fa-robot"></i>Coding Tools</h3>
+          <div class="category-content" id="codingTools"></div>
+        </div>
+        <div class="category-card" data-category="ai">
+          <h3><i class="fas fa-robot"></i>Image Generation</h3>
+          <div class="category-content" id="imageGeneration"></div>
         </div>
 
         <!-- Free Resources -->
@@ -108,6 +117,10 @@
           <h3><i class="fas fa-gamepad"></i> Game Dev</h3>
           <div class="category-content" id="gameDev"></div>
         </div>
+        <div class="category-card" data-category="ai">
+          <h3><i class="fas fa-robot"></i>Data Visualization</h3>
+          <div class="category-content" id="datavisualization"></div>
+        </div>
 
         <!-- Design Tools -->
         <div class="category-card" data-category="design">
@@ -135,32 +148,23 @@
       <div class="container">
         <div class="footer-content">
           <div class="footer-section">
-            <h4>DevResources</h4>
+            <h4>ToolGrid</h4>
             <p>
               Your one-stop platform for discovering the best development tools
               and resources.
             </p>
             <div class="social-links">
-              <a href="https://github.com/Scripts-By-Hamza" title="GitHub"><i class="fab fa-github"></i></a>
-              <a href="https://www.linkedin.com/in/muhammad-hamza-24d03/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+              <a href="https://github.com/Scripts-By-Hamza" title="GitHub"
+                ><i class="fab fa-github"></i
+              ></a>
+              <a
+                href="https://www.linkedin.com/in/muhammad-hamza-24d03/"
+                title="LinkedIn"
+                ><i class="fab fa-linkedin"></i
+              ></a>
             </div>
           </div>
           <div class="footer-section">
-            <h4>Categories</h4>
-            <ul>
-              <li><a href="#aiTools">AI Tools</a></li>
-              <li><a href="#freeResources">Free Resources</a></li>
-              <li><a href="#frontendFrameworks">Frontend</a></li>
-              <li><a href="#backendFrameworks">Backend</a></li>
-            </ul>
-          </div>
-          <div class="footer-section">
-            <h4>More</h4>
-            <ul>
-              <li><a href="#mobileDev">Mobile Dev</a></li>
-              <li><a href="#gameDev">Game Dev</a></li>
-              <li><a href="#designTools">Design Tools</a></li>
-            </ul>
           </div>
           <div class="footer-section">
             <h4>Newsletter</h4>
@@ -174,7 +178,7 @@
         <div class="footer-bottom">
           <p>&copy; 2025 Toolify. All rights reserved.</p>
           <div class="footer-links">
-            <a href="https://github.com/Scripts-By-Hamza">Script By Hamza</a>
+            <a href="https://github.com/Scripts-By-Hamza" target="_blank">Script By Hamza</a>
           </div>
         </div>
       </div>
