--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Header/Navigation -->
@@ -155,12 +155,12 @@
             </p>
             <div class="social-links">
               <a href="https://github.com/Scripts-By-Hamza" title="GitHub"
-                ><i class="fab fa-github"></i
+                ><i class="fab fa-github" style="color: white;"></i
               ></a>
               <a
                 href="https://www.linkedin.com/in/muhammad-hamza-24d03/"
                 title="LinkedIn"
-                ><i class="fab fa-linkedin"></i
+                ><i class="fab fa-linkedin" style="color: white;"></i
               ></a>
             </div>
           </div>
@@ -176,9 +176,9 @@
           </div>
         </div>
         <div class="footer-bottom">
-          <p>&copy; 2025 Toolify. All rights reserved.</p>
+          <p style="color: white;">&copy; 2025 Toolify. All rights reserved.</p>
           <div class="footer-links">
-            <a href="https://github.com/Scripts-By-Hamza" target="_blank">Script By Hamza</a>
+            <a href="https://github.com/Scripts-By-Hamza" target="_blank" style="color: white;">Script By Hamza</a>
           </div>
         </div>
       </div>
