All errors and bugs are solved, Ready To Lanched.

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           </div>
         </div>
         <div class="footer-bottom">
-          <p style="color: white;">&copy; 2025 Toolify. All rights reserved.</p>
+          <p style="color: white;">&copy; 2025 ToolGrid. All rights reserved.</p>
           <div class="footer-links">
             <a href="https://github.com/Scripts-By-Hamza" target="_blank" style="color: white;">Script By Hamza</a>
           </div>
